# minecraft_tool

./: AGENTS.md  LICENSE  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  deploy-web.yml  lint.yml
mc-toolbox/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
mc-toolbox/.github/workflows/: build.yml  deploy-web.yml
mc-toolbox/src/: app.ts  main.ts  styles.css
mc-toolbox/src-tauri/: .gitignore  Cargo.toml  rustfmt.toml  tauri.conf.json
mc-toolbox/src-tauri/capabilities/: default.json  desktop.json
mc-toolbox/src-tauri/src/: lib.rs
mc-toolbox/src-tauri/src/motd/: bedrock.rs  java.rs  mod.rs  types.rs  varint.rs
mc-toolbox/src/core/: event-bus.ts  module-loader.ts  theme.ts  types.ts
mc-toolbox/src/lang/: index.ts
mc-toolbox/src/lang/locales/: en_us.json  zh_cn.json
mc-toolbox/src/modules/server-motd/: commands.ts  index.ts  ui.ts
mc-toolbox/src/modules/settings/: index.ts  ui.ts
src/: app.ts
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/motd/: java.rs  varint.rs
src/core/: layout.ts  theme.ts
src/lang/locales/: en_us.json  zh_cn.json
src/modules/server-motd/: colors.ts  commands.ts  index.ts
src/modules/settings/: commands.ts  ui.ts
