[package]
name = "mc-toolbox"
version = "0.1.0"
description = "MC Toolbox - Minecraft 工具箱"
authors = ["NetheritePickaxe"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mc_toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# shell 插件：用于打开外链 / 在浏览器中下载 APK
tauri-plugin-shell = "2"

# updater 插件仅用于桌面端（Android 不支持，需走自建流程）
# 用 target-specific 依赖，避免 Android/iOS 编译时引入无用 crate
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# 发布构建优化体积：剥离调试符号 + LTO + 体积优先 + abort
# Android: 每个 ABI 的 .so 从 ~100MB(debug) 降到 ~10-20MB(release)
[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
